# emby-curator

./: .dockerignore  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.dev  EMBY_CHECK_GUIDE.md  ENV_SETUP.md  HEALTH_REPORT.md  IMPLEMENTATION_SUMMARY.md  Makefile  NOTICE  README.md  REMEDIATION_PLAN.md  SIMPLIFY_AUDIT.md  TEAM_PROMPT_EXECUTION.md  TEAM_PROMPT_PLANNING.md  coverage.json  pyproject.toml  requirements.txt  setup.py  sonar-project.properties
.claude/: settings.json
.claude/agents/: sonarqube-issue-fixer.md
.devcontainer/: devcontainer.json
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: edge.yaml  gitleaks.yml  prerelease.yaml  publish-pypi.yml  python-test.yaml  release.yaml  security-scan.yaml
dashboards/: .env.example  DASHBOARD_PROPOSAL.md  emby_missing.py  emby_unplayed.py  emby_yearly_analytics.py  shared.py
docs/: MISSING_EPISODES_EXPORT.md
emby_dedupe/: __init__.py  __main__.py
emby_dedupe/api/: checker.py  cleanup_pipeline.py  client.py  deduplication.py  deletion_guard.py  description_cache.py  descriptions.py  genre_providers.py  genres.py  metadata.py  missing_episodes.py  pagination.py  quality_compare.py  search.py
emby_dedupe/cli/: app.py  arguments.py  check.py  cleanup.py  descriptions.py  errors.py  genres.py  main.py  missing_episodes.py
emby_dedupe/models/: cleanup.py  disjoint_set.py
emby_dedupe/reports/: cleanup.py  common.py  html.py  markdown.py
emby_dedupe/static/css/: report.css
emby_dedupe/templates/: cleanup_report.html  report.html
emby_dedupe/utils/: config.py  constants.py  exceptions.py  file_ops.py  http.py  json_cache.py  logging.py
rootfs/usr/local/sbin/: entrypoint
scripts/: consolidate-series.sh  export-missing-episodes.py  fix-nfo-mismatches.sh  genre-webhook-listener.py  validate-cocoindex.sh
scripts/dv/: README.md  dv-convert.py  dv-load.py  dv-scan.py  dv-worker.sh  dv_common.py
scripts/dv/systemd/: dv-worker.service  dv-worker.timer
tests/: __init__.py  conftest.py
tests/fixtures/: duplicate_groups.json  provider_tables.json
tests/unit/: __init__.py  test_dv_common.py  test_main.py
tests/unit/api/: test_checker.py  test_cleanup_pipeline.py  test_client.py  test_comprehensive_quality.py  test_deduplication.py  test_deduplication_advanced.py  test_deduplication_extra.py  test_deletion_guard.py  test_description_cache.py  test_descriptions.py  test_dovi_p5.py  test_genre_providers.py  test_genres.py  test_metadata.py  test_missing_episodes.py  test_quality_compare.py  test_search.py  test_source_quality_detection.py
tests/unit/cli/: test_arguments.py  test_check.py  test_cleanup.py  test_descriptions_cli.py  test_genres_cli.py  test_main.py  test_missing_episodes_cli.py
tests/unit/models/: test_disjoint_set.py
tests/unit/reports/: test_cleanup_report.py  test_common.py  test_html.py  test_markdown.py
tests/unit/utils/: test_config.py  test_constants.py  test_file_ops.py  test_http.py  test_logging.py
tools/: __init__.py
tools/sonar/: __init__.py  config.py  issues.py  quality_gate.py
