[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=emby_dedupe --cov-report=term-missing --cov-report=xml:coverage.xml"
filterwarnings = [
    # Suppress warnings from tqdm progress bars that can't be properly closed in test environment
    "ignore::pytest.PytestUnraisableExceptionWarning"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
disallow_untyped_calls = false
implicit_optional = true

# Module specific options
[[tool.mypy.overrides]]
module = ["emby_dedupe.utils.http", "emby_dedupe.api.client", 
          "emby_dedupe.api.deduplication", "emby_dedupe.cli.main"]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Ignore line length errors

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Unused imports in __init__ files
"tests/*" = ["E501"]   # Line length in tests

[tool.coverage.run]
source = ["emby_dedupe"]
omit = ["tests/*", "venv/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]