[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emby-curator"
version = "3.0.0"
description = "Curate Emby libraries: deduplicate, localize genres & descriptions, clean up stale media, and analyze missing episodes"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["emby", "media", "library", "curation", "deduplication", "genres", "metadata", "cleanup"]
authors = [
    { name = "Barlog951", email = "9975572+Barlog951@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "httpx>=0.28.1",
    "tqdm>=4.67.3",
    "backoff>=2.2.1",
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "rank-torrent-name>=1.10.0",
    "python-dotenv>=1.0.0",
    "typer>=0.24.0",
    "lingua-language-detector>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.8.0",
    "mypy>=1.19.1",
    "types-PyYAML>=6.0.12",
    "ruff>=0.15.0",
    "vulture>=2.14",
    "requests>=2.32.5",
]

[project.urls]
Homepage = "https://github.com/Barlog951/emby-curator"
Repository = "https://github.com/Barlog951/emby-curator"
"Original Project" = "https://github.com/troykelly/emby-dedupe"
Changelog = "https://github.com/Barlog951/emby-curator/blob/main/CHANGELOG.md"

[project.scripts]
emby-curator = "emby_dedupe.cli.app:main"
emby-dedupe = "emby_dedupe.cli.app:main"

[tool.setuptools.packages.find]
include = ["emby_dedupe*"]

[tool.setuptools.package-data]
emby_dedupe = ["templates/*.html", "static/css/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = ""
filterwarnings = [
    # Suppress warnings from tqdm progress bars that can't be properly closed in test environment
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # Suppress Pydantic V2 deprecation warnings from rank-torrent-name (RTN) third-party library
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
    # Suppress asyncio.iscoroutinefunction deprecation from backoff library (third-party)
    "ignore::DeprecationWarning:backoff"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "api_dependent: marks tests requiring Emby API access",
]

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
disallow_untyped_calls = false
implicit_optional = true

[tool.ruff]
line-length = 100
target-version = "py314"
# Personal/local helper scripts (gitignored) are not linted
extend-exclude = ["scripts/smoke_test_*.py", "scripts/analyze_stale_series.py", "scripts/run-*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # Ignore line length errors

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Unused imports in __init__ files
"tests/*" = ["E501"]   # Line length in tests

[tool.coverage.run]
source = ["emby_dedupe"]
omit = ["tests/*", "venv/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]